# amworkflow

./: .gitignore  .opt  123.stl  MANIFEST.in  README.md  bcd.py  beam700x150x150x10.csv  beam700x150x150x10.gcode  beam_honeycomb_700x150x150x11.4  cube_honeycomb_150x150x150x10.csv  cube_honeycomb_150x150x150x10.gcode  cube_honeycomb_150x150x150x10_P1.gcode  cube_honeycomb_150x150x150x10_P2.gcode  cube_honeycomb_150x150x150x10_P3.gcode  cube_honeycomb_150x150x150x10_P4.gcode  cube_honeycomb_150x150x150x10_P5.gcode  cube_honeycomb_150x150x150x10_P6.gcode  cube_zigzag_150x150x150x11.3.csv  cube_zigzag_150x150x150x11.3_P10.gcode  cube_zigzag_150x150x150x11.3_P11.gcode  cube_zigzag_150x150x150x11.3_P12.gcode  cube_zigzag_150x150x150x11.3_P7.gcode  cube_zigzag_150x150x150x11.3_P8.gcode  cube_zigzag_150x150x150x11.3_P9.gcode  cube_zigzag_150x150x150x11.csv  cube_zigzag_150x150x150x11.gcode  dodo.py  dof_map.csv  double_zigzag_150x150x11.3x150.stl  double_zigzag_700x150x11.3x150.stl  doublezigzag_150x150x11x150.stl  env.yml  env_clean.yml  environment.yaml  environment.yml  environment_clean.yml  environment_deprecated.yml  example.yaml  honeycomb_150x150x10x150.stl  honeycomb_700x150x10x150.stl  (+7 more)
amworkflow/: __init__.py  api.py  extrude_gmsh.msh  main2.py  occ_helpers.py
output/: cube_honeycomb_150x150x150x10_P1.gcode  cube_honeycomb_150x150x150x10_P2.gcode  cube_honeycomb_150x150x150x10_P3.gcode  cube_honeycomb_150x150x150x10_P4.gcode  cube_honeycomb_150x150x150x10_P5.gcode  cube_honeycomb_150x150x150x10_P6.gcode  cube_zigzag_150x150x150x11.3_P10.gcode  cube_zigzag_150x150x150x11.3_P11.gcode  cube_zigzag_150x150x150x11.3_P12.gcode  cube_zigzag_150x150x150x11.3_P7.gcode  (+2 more)
usecases/: readme.md  (+3 more)
(+197 files in other folders)
