[project]
name = "amworkflow"
version = "1.0"
authors = [
    {name = "Annika Robens-Radermacher", email = "annika.robens-radermacher@bam.de"},
    {name = "Yuxiang He", email = "yuxiang.he@bam.de"}
]

description = "Automatic workflows for AM concrete appplications"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
]
license = {file = "LICENSE"}
keywords = ["AM concrete", "workflow", "CAD"]
dependencies = [
  "fenics-dolfinx",
  "gmsh",
  "sqlalchemy"
]

[project.urls]
"Homepage" = "https://github.com/BAMresearch/amworkflow"
"Bug Tracker" = "https://github.com/BAMresearch/amworkflow/issues"

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
packages = ["amworkflow"]